reorg quote to hold more info

--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -50,17 +50,6 @@
    "source": [
     "#| export \n",
     "\n",
-    "@dataclass\n",
-    "class Quote:\n",
-    "    from_token: Token; to_token: Token; path: List[LiquidityPoolForSwap]; amount_in: int; amount_out: int\n",
-    "\n",
-    "    def to_tuple(self) -> tuple: return (self.from_token, self.to_token, tuple(self.path), self.amount_in, self.amount_out)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def from_tuple(t: tuple) -> \"Quote\":\n",
-    "        from_token, to_token, path, amount_in, amount_out = t\n",
-    "        return Quote(from_token=from_token, to_token=to_token, path=list(path), amount_in=amount_in, amount_out=amount_out)\n",
-    "\n",
     "# magic numbers\n",
     "QUOTER_STABLE_POOL_FILLER, QUOTER_VOLATILE_POOL_FILLER = 2097152, 4194304\n",
     "\n",
@@ -74,16 +63,31 @@
     "@dataclass\n",
     "class RouteInput: pool: LiquidityPoolForSwap; reversed: bool\n",
     "\n",
-    "def prepare_route(nodes: List[RouteInput]) -> PreparedRoute:\n",
-    "    types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(nodes))], []) + [\"address\"], []\n",
-    "    for node in nodes:\n",
-    "        pool, reversed = node.pool, node.reversed\n",
-    "        token0, token1 = pool.token0 if not reversed else pool.token1, pool.token1 if not reversed else pool.token0\n",
-    "        if pool.type > 0: filler = pool.type\n",
-    "        else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable else QUOTER_VOLATILE_POOL_FILLER\n",
-    "        if len(values) == 0: values = [token0.token_address, filler, token1.token_address]\n",
-    "        else: values += [filler, token1.token_address]\n",
-    "    return PreparedRoute(types=types, values=values)"
+    "@dataclass\n",
+    "class QuoteInput:\n",
+    "    from_token: Token; to_token: Token; path: List[LiquidityPoolForSwap]; route: PreparedRoute; amount_in: int\n",
+    "\n",
+    "    def to_tuple(self) -> tuple: return (self.from_token, self.to_token, tuple(self.path), self.route, self.amount_in, self.amount_out)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def from_tuple(t: tuple) -> \"QuoteInput\":\n",
+    "        from_token, to_token, path, route, amount_in, amount_out = t\n",
+    "        return QuoteInput(from_token=from_token, to_token=to_token, path=list(path), route=route, amount_in=amount_in, amount_out=amount_out)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def prepare_route(nodes: List[RouteInput]) -> PreparedRoute:\n",
+    "        types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(nodes))], []) + [\"address\"], []\n",
+    "        for node in nodes:\n",
+    "            pool, reversed = node.pool, node.reversed\n",
+    "            token0, token1 = pool.token0 if not reversed else pool.token1, pool.token1 if not reversed else pool.token0\n",
+    "            if pool.type > 0: filler = pool.type\n",
+    "            else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable else QUOTER_VOLATILE_POOL_FILLER\n",
+    "            if len(values) == 0: values = [token0.token_address, filler, token1.token_address]\n",
+    "            else: values += [filler, token1.token_address]\n",
+    "        return PreparedRoute(types=types, values=values) \n",
+    "\n",
+    "@dataclass\n",
+    "class Quote: input: QuoteInput; amount_out: int"
    ]
   },
   {
@@ -100,7 +104,7 @@
     "    RouteInput(pool=LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), reversed=False)\n",
     "]\n",
     "\n",
-    "rt = prepare_route(nodes)\n",
+    "rt = QuoteInput.prepare_route(nodes)\n",
     "\n",
     "test_eq(rt.types, ['address', 'int24', 'address', 'int24', 'address', 'int24', 'address'])\n",
     "test_eq(rt.values, ['0x4200000000000000000000000000000000000006', 200, '0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', 4194304, '0x7F5c764cBc14f9669B88837ca1490cCa17c31607', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'])\n",
@@ -114,7 +118,7 @@
     "    RouteInput(pool=LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), reversed=False)\n",
     "]\n",
     "\n",
-    "rt = prepare_route(nodes)\n",
+    "rt = QuoteInput.prepare_route(nodes)\n",
     "\n",
     "test_eq(rt.types, ['address', 'int24', 'address', 'int24', 'address', 'int24', 'address'])\n",
     "test_eq(rt.values, ['0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', 200, '0x4200000000000000000000000000000000000006', 4194304, '0x7F5c764cBc14f9669B88837ca1490cCa17c31607', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'])\n",
