--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -53,7 +53,7 @@
     "from sugar.price import Price\n",
     "from sugar.deposit import Deposit\n",
     "from sugar.helpers import ADDRESS_ZERO, chunk, normalize_address, Pair, find_all_paths\n",
-    "from sugar.quote import Quote, RouteInput, prepare_route\n"
+    "from sugar.quote import QuoteInput, Quote, RouteInput\n"
    ]
   },
   {
@@ -147,17 +147,22 @@
     "        tokens = {t.token_address: t for t in tokens}\n",
     "        return list(filter(lambda p: p is not None, map(lambda p: LiquidityPoolForSwap.from_tuple(p, tokens), pools)))\n",
     "    \n",
-    "    def prepare_quote_batch(self, batcher: RequestBatcher, pools: List[List[LiquidityPoolForSwap]], amount_in: int, paths: List[List[Tuple]]):\n",
+    "    def prepare_quote_batch(self, from_token: Token, to_token: Token, batcher: RequestBatcher, pools: List[List[LiquidityPoolForSwap]], amount_in: int, paths: List[List[Tuple]]):\n",
+    "        inputs = []\n",
     "        for i, path in enumerate(paths):\n",
-    "            rt = prepare_route([RouteInput(pool=p, reversed=p.token0.token_address != path[i][0]) for i, p in enumerate(pools[i])])\n",
-    "            batcher.add(self.quoter.functions.quoteExactInput(rt.encoded, amount_in))\n",
-    "        return batcher\n",
+    "            route = QuoteInput.prepare_route([RouteInput(pool=p, reversed=p.token0.token_address != path[i][0]) for i, p in enumerate(pools[i])])\n",
+    "            q = QuoteInput(from_token=from_token, to_token=to_token, amount_in=amount_in, path=pools[i], route=route)\n",
+    "            batcher.add(self.quoter.functions.quoteExactInput(q.route.encoded, amount_in))\n",
+    "            inputs.append(q)\n",
+    "        return batcher, inputs\n",
     "\n",
-    "    def prepare_quotes(self, from_token:Token, to_token:Token, amount_in: int, path_pools: List[List[LiquidityPoolForSwap]], responses):\n",
+    "    # def prepare_quotes(self, from_token:Token, to_token:Token, amount_in: int, path_pools: List[List[LiquidityPoolForSwap]], responses):\n",
+    "    def prepare_quotes(self, quote_inputs: List[QuoteInput], responses):\n",
+    "        if len(responses) != len(quote_inputs): raise ValueError(f\"Number of responses {len(responses)} does not match number of quote inputs {len(quote_inputs)}\")\n",
     "        quotes = []\n",
     "        for i, r in enumerate(responses):\n",
     "            if isinstance(r, Exception): continue\n",
-    "            else: quotes.append(Quote(from_token=from_token, to_token=to_token, path=path_pools[i], amount_in=amount_in, amount_out=r[0]))\n",
+    "            else: quotes.append(Quote(input=quote_inputs[i], amount_out=r[0]))\n",
     "        return quotes\n",
     "    \n",
     "    def get_paths_for_quote(self, from_token: Token, to_token: Token, pools: List[LiquidityPoolForSwap], exclude_tokens: List[str]) -> List[List[Tuple]]:\n",
@@ -266,8 +271,8 @@
     "        pools_dict = {p.lp: p for p in pools}\n",
     "        path_pools = [list(map(lambda p: pools_dict[p[2]], path)) for path in paths]\n",
     "        async with self.web3.batch_requests() as batch:\n",
-    "            batch = self.prepare_quote_batch(batch, path_pools, amount_in, paths)\n",
-    "            return self.prepare_quotes(from_token, to_token, amount_in, path_pools, await batch.async_execute())\n",
+    "            batch, inputs = self.prepare_quote_batch(from_token, to_token, batch, path_pools, amount_in, paths)\n",
+    "            return self.prepare_quotes(inputs, await batch.async_execute())\n",
     "\n",
     "    @require_async_context\n",
     "    async def get_quote(self, from_token: Token, to_token: Token, amount_in: int, exclude_tokens: List[str] = []) -> Optional[Quote]:\n",
@@ -463,8 +468,8 @@
     "        pools_dict = {p.lp: p for p in pools}\n",
     "        path_pools = [list(map(lambda p: pools_dict[p[2]], path)) for path in paths]\n",
     "        with self.web3.batch_requests() as batch:\n",
-    "            batch = self.prepare_quote_batch(batch, path_pools, amount_in, paths)\n",
-    "            return self.prepare_quotes(from_token, to_token, amount_in, path_pools, batch.execute())\n",
+    "            batch, inputs = self.prepare_quote_batch(from_token, to_token, batch, path_pools, amount_in, paths)\n",
+    "            return self.prepare_quotes(inputs, batch.execute())\n",
     "\n",
     "    @require_context\n",
     "    def get_quote(self, from_token: Token, to_token: Token, amount_in: int, exclude_tokens: List[str] = []) -> Optional[Quote]:\n",
@@ -537,8 +542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000000000000000000 -> 3.86114\n",
-      "CL200-WETH/VELO - CL100-WETH/USD+ - CL1-USDC/USD+\n"
+      "100000000000000000000 -> 3.833593\n",
+      "CL50-VELO/opxVELO - CL200-USDC/opxVELO\n"
      ]
     }
    ],
@@ -551,8 +556,8 @@
     "    exclude_tokens = [\"0x74ccbe53f77b08632ce0cb91d3a545bf6b8e0979\", \"0x139283255069ea5deef6170699aaef7139526f1f\", \"0x88a89866439f4c2830986b79cbe6f69d1bd548bb\", \"0x8901cb2e82cc95c01e42206f8d1f417fe53e7af0\"]\n",
     "    q = op.get_quote(from_token, to_token, amount_in, exclude_tokens)\n",
     "    if q:\n",
-    "        print(f\"{q.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
-    "        print(' - '.join(map(lambda p: p.symbol, q.path)))"
+    "        print(f\"{q.input.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
+    "        print(' - '.join(map(lambda p: p.symbol, q.input.path)))"
    ]
   },
   {
@@ -759,8 +764,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000000000000000000 -> 3.751304\n",
-      "vAMM-USDC/VELO\n"
+      "100000000000000000000 -> 3.820492\n",
+      ">>>>>>> [LiquidityPoolForSwap(lp='0x439c8a3704bDF52fec25bc271D67BaA2Bd204104', type=-1, token0=Token(token_address='0x2dAD3a13ef0C6366220f989157009e501e7938F8', symbol='EXTRA', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-EXTRA/VELO'), LiquidityPoolForSwap(lp='0x477Fa18B063B7728409570D274f7a055e3da0D6E', type=-1, token0=Token(token_address='0x2dAD3a13ef0C6366220f989157009e501e7938F8', symbol='EXTRA', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-EXTRA/USDC'), LiquidityPoolForSwap(lp='0x36E3c209B373b861c185ecdBb8b2EbDD98587BDb', type=0, token0=Token(token_address='0x0b2C639c533813f4Aa9D7837CAf62653d097Ff85', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/USDC')]\n",
+      "vAMM-EXTRA/VELO - vAMM-EXTRA/USDC - sAMM-USDC/USDC\n"
      ]
     }
    ],
@@ -773,8 +779,9 @@
     "    exclude_tokens = [\"0x74ccbe53f77b08632ce0cb91d3a545bf6b8e0979\", \"0x139283255069ea5deef6170699aaef7139526f1f\", \"0x88a89866439f4c2830986b79cbe6f69d1bd548bb\", \"0x8901cb2e82cc95c01e42206f8d1f417fe53e7af0\"]\n",
     "    q = await op.get_quote(from_token, to_token, amount_in, exclude_tokens)\n",
     "    if q:\n",
-    "        print(f\"{q.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
-    "        print(' - '.join(map(lambda p: p.symbol, q.path)))"
+    "        print(f\"{q.input.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
+    "        print(f\">>>>>>> {q.input.path}\")\n",
+    "        print(' - '.join(map(lambda p: p.symbol, q.input.path)))"
    ]
   },
   {
