clean up quote interface

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -53,7 +53,7 @@
     "from sugar.price import Price\n",
     "from sugar.deposit import Deposit\n",
     "from sugar.helpers import ADDRESS_ZERO, chunk, normalize_address, Pair, find_all_paths\n",
-    "from sugar.quote import QuoteInput, Quote, RouteInput\n"
+    "from sugar.quote import QuoteInput, Quote\n"
    ]
   },
   {
@@ -150,8 +150,8 @@
     "    def prepare_quote_batch(self, from_token: Token, to_token: Token, batcher: RequestBatcher, pools: List[List[LiquidityPoolForSwap]], amount_in: int, paths: List[List[Tuple]]):\n",
     "        inputs = []\n",
     "        for i, path in enumerate(paths):\n",
-    "            route = QuoteInput.prepare_route([RouteInput(pool=p, reversed=p.token0.token_address != path[i][0]) for i, p in enumerate(pools[i])])\n",
-    "            q = QuoteInput(from_token=from_token, to_token=to_token, amount_in=amount_in, path=pools[i], route=route)\n",
+    "            p = [(p, p.token0.token_address != path[i][0]) for i, p in enumerate(pools[i])]\n",
+    "            q = QuoteInput(from_token=from_token, to_token=to_token, amount_in=amount_in, path=p)\n",
     "            batcher.add(self.quoter.functions.quoteExactInput(q.route.encoded, amount_in))\n",
     "            inputs.append(q)\n",
     "        return batcher, inputs\n",
@@ -542,7 +542,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000000000000000000 -> 3.833593\n",
+      "100000000000000000000 -> 3.972572\n",
       "CL50-VELO/opxVELO - CL200-USDC/opxVELO\n"
      ]
     }
@@ -557,7 +557,7 @@
     "    q = op.get_quote(from_token, to_token, amount_in, exclude_tokens)\n",
     "    if q:\n",
     "        print(f\"{q.input.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
-    "        print(' - '.join(map(lambda p: p.symbol, q.input.path)))"
+    "        print(' - '.join(map(lambda p: p[0].symbol, q.input.path)))"
    ]
   },
   {
@@ -764,9 +764,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100000000000000000000 -> 3.820492\n",
-      ">>>>>>> [LiquidityPoolForSwap(lp='0x439c8a3704bDF52fec25bc271D67BaA2Bd204104', type=-1, token0=Token(token_address='0x2dAD3a13ef0C6366220f989157009e501e7938F8', symbol='EXTRA', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-EXTRA/VELO'), LiquidityPoolForSwap(lp='0x477Fa18B063B7728409570D274f7a055e3da0D6E', type=-1, token0=Token(token_address='0x2dAD3a13ef0C6366220f989157009e501e7938F8', symbol='EXTRA', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-EXTRA/USDC'), LiquidityPoolForSwap(lp='0x36E3c209B373b861c185ecdBb8b2EbDD98587BDb', type=0, token0=Token(token_address='0x0b2C639c533813f4Aa9D7837CAf62653d097Ff85', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/USDC')]\n",
-      "vAMM-EXTRA/VELO - vAMM-EXTRA/USDC - sAMM-USDC/USDC\n"
+      "100000000000000000000 -> 3.947759\n",
+      ">>>>>>> [(LiquidityPoolForSwap(lp='0xa0A215dE234276CAc1b844fD58901351a50fec8A', type=-1, token0=Token(token_address='0x0b2C639c533813f4Aa9D7837CAf62653d097Ff85', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-USDC/VELO'), True)]\n",
+      "vAMM-USDC/VELO\n"
      ]
     }
    ],
@@ -781,7 +781,7 @@
     "    if q:\n",
     "        print(f\"{q.input.amount_in} -> {q.amount_out / 10 ** to_token.decimals}\")\n",
     "        print(f\">>>>>>> {q.input.path}\")\n",
-    "        print(' - '.join(map(lambda p: p.symbol, q.input.path)))"
+    "        print(' - '.join(map(lambda p: p[0].symbol, q.input.path)))"
    ]
   },
   {
