--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -35,7 +35,7 @@
     "#| export\n",
     "\n",
     "from functools import reduce\n",
-    "from typing import List, Union\n",
+    "from typing import List, Union, Tuple\n",
     "from eth_abi.packed import encode_packed\n",
     "from dataclasses import dataclass\n",
     "from sugar.token import Token\n",
@@ -60,31 +60,30 @@
     "    @property\n",
     "    def encoded(self) -> bytes: return encode_packed(self.types, self.values)\n",
     "\n",
-    "@dataclass\n",
-    "class RouteInput: pool: LiquidityPoolForSwap; reversed: bool\n",
+    "def pack_path(path: List[Tuple[LiquidityPoolForSwap, bool]]) -> PreparedRoute:\n",
+    "    types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(path))], []) + [\"address\"], []\n",
+    "    for node in path:\n",
+    "        pool, reversed = node\n",
+    "        token0, token1 = pool.token0 if not reversed else pool.token1, pool.token1 if not reversed else pool.token0\n",
+    "        if pool.type > 0: filler = pool.type\n",
+    "        else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable else QUOTER_VOLATILE_POOL_FILLER\n",
+    "        if len(values) == 0: values = [token0.token_address, filler, token1.token_address]\n",
+    "        else: values += [filler, token1.token_address]\n",
+    "    return PreparedRoute(types=types, values=values)\n",
     "\n",
     "@dataclass\n",
     "class QuoteInput:\n",
-    "    from_token: Token; to_token: Token; path: List[LiquidityPoolForSwap]; route: PreparedRoute; amount_in: int\n",
+    "    from_token: Token; to_token: Token; path: List[Tuple[LiquidityPoolForSwap, bool]]; amount_in: int\n",
     "\n",
-    "    def to_tuple(self) -> tuple: return (self.from_token, self.to_token, tuple(self.path), self.route, self.amount_in, self.amount_out)\n",
+    "    def to_tuple(self) -> tuple: return (self.from_token, self.to_token, tuple(self.path), self.amount_in, self.amount_out)\n",
     "\n",
     "    @staticmethod\n",
     "    def from_tuple(t: tuple) -> \"QuoteInput\":\n",
-    "        from_token, to_token, path, route, amount_in, amount_out = t\n",
-    "        return QuoteInput(from_token=from_token, to_token=to_token, path=list(path), route=route, amount_in=amount_in, amount_out=amount_out)\n",
+    "        from_token, to_token, path, amount_in, amount_out = t\n",
+    "        return QuoteInput(from_token=from_token, to_token=to_token, path=list(path), amount_in=amount_in, amount_out=amount_out)\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prepare_route(nodes: List[RouteInput]) -> PreparedRoute:\n",
-    "        types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(nodes))], []) + [\"address\"], []\n",
-    "        for node in nodes:\n",
-    "            pool, reversed = node.pool, node.reversed\n",
-    "            token0, token1 = pool.token0 if not reversed else pool.token1, pool.token1 if not reversed else pool.token0\n",
-    "            if pool.type > 0: filler = pool.type\n",
-    "            else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable else QUOTER_VOLATILE_POOL_FILLER\n",
-    "            if len(values) == 0: values = [token0.token_address, filler, token1.token_address]\n",
-    "            else: values += [filler, token1.token_address]\n",
-    "        return PreparedRoute(types=types, values=values) \n",
+    "    @property\n",
+    "    def route(self) -> PreparedRoute: return pack_path(self.path)\n",
     "\n",
     "@dataclass\n",
     "class Quote: input: QuoteInput; amount_out: int"
@@ -98,13 +97,13 @@
    "source": [
     "from fastcore.test import test_eq\n",
     "\n",
-    "nodes = [\n",
-    "    RouteInput(pool=LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0=Token(token_address='0x4200000000000000000000000000000000000006', symbol='WETH', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), reversed=False),\n",
-    "    RouteInput(pool=LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), reversed=False),\n",
-    "    RouteInput(pool=LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), reversed=False)\n",
+    "path = [\n",
+    "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0=Token(token_address='0x4200000000000000000000000000000000000006', symbol='WETH', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), False),\n",
+    "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
+    "    (LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), False)\n",
     "]\n",
     "\n",
-    "rt = QuoteInput.prepare_route(nodes)\n",
+    "rt = pack_path(path)\n",
     "\n",
     "test_eq(rt.types, ['address', 'int24', 'address', 'int24', 'address', 'int24', 'address'])\n",
     "test_eq(rt.values, ['0x4200000000000000000000000000000000000006', 200, '0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', 4194304, '0x7F5c764cBc14f9669B88837ca1490cCa17c31607', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'])\n",
@@ -112,13 +111,13 @@
     "\n",
     "# test reversed version\n",
     "\n",
-    "nodes = [\n",
-    "    RouteInput(pool=LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0=Token(token_address='0x4200000000000000000000000000000000000006', symbol='WETH', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), reversed=True),\n",
-    "    RouteInput(pool=LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), reversed=False),\n",
-    "    RouteInput(pool=LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), reversed=False)\n",
+    "path = [\n",
+    "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0=Token(token_address='0x4200000000000000000000000000000000000006', symbol='WETH', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), True),\n",
+    "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
+    "    (LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), False)\n",
     "]\n",
     "\n",
-    "rt = QuoteInput.prepare_route(nodes)\n",
+    "rt = pack_path(path)\n",
     "\n",
     "test_eq(rt.types, ['address', 'int24', 'address', 'int24', 'address', 'int24', 'address'])\n",
     "test_eq(rt.values, ['0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', 200, '0x4200000000000000000000000000000000000006', 4194304, '0x7F5c764cBc14f9669B88837ca1490cCa17c31607', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'])\n",
