--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "import asyncio, os\n",
+    "import asyncio, os, socket\n",
     "from functools import wraps\n",
     "from typing import List, TypeVar, Callable, Optional, Tuple, Dict\n",
     "from web3 import Web3, HTTPProvider, AsyncWeb3, AsyncHTTPProvider, Account\n",
@@ -50,7 +50,9 @@
     "from sugar.deposit import Deposit\n",
     "from sugar.helpers import ADDRESS_ZERO, chunk, normalize_address, Pair, find_all_paths\n",
     "from sugar.quote import QuoteInput, Quote\n",
-    "from sugar.swap import setup_planner\n"
+    "from sugar.swap import setup_planner\n",
+    "from fastcore.test import test_close\n",
+    "from fastcore.test import test_eq\n"
    ]
   },
   {
@@ -661,9 +663,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastcore.test import test_eq\n",
-    "import socket\n",
-    "\n",
     "host, port ='127.0.0.1', 4444\n",
     "try:\n",
     "    sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
@@ -880,8 +879,6 @@
    "outputs": [],
    "source": [
     "# velo -> usdc\n",
-    "\n",
-    "from fastcore.test import test_close\n",
     "\n",
     "async with AsyncOPChainSimnet() as op:\n",
     "    tokens = await op.get_all_tokens(listed_only=True)\n",
