--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -189,20 +189,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deposits - WIP\n",
+    "## Swaps\n",
     "\n",
-    "In order to deposit, make sure spender's account's private key is provided via `SUGAR_PK` env var. Here's how you can deposit [vAMM-USDC/AERO](https://aerodrome.finance/deposit?token0=0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913&token1=0x940181a94A35A4569E4529A3CDfB74e38FD98631&type=-1)\n",
+    "Get a quote and swap: \n",
     "\n",
     "```python\n",
     "from sugar.chains import AsyncBaseChain\n",
-    "from sugar.deposit import Deposit\n",
     "\n",
     "async with AsyncBaseChain() as chain:\n",
-    "    pools = await chain.get_pools()\n",
-    "    pools = list(filter(lambda x: \"vAMM-USDC\" in x.symbol and \"AERO\" in x.symbol, pools))\n",
-    "    # 0.02 USDC \n",
-    "    await chain.deposit(Deposit(pools[0], 0.02))\n",
+    "    tokens = await chains.get_all_tokens(listed_only=True)\n",
+    "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
+    "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
+    "    eth = get_token_by_address(\"ETH\")\n",
+    "    quote = await op.get_quote(velo, eth, 10)\n",
+    "    # check on quote to see if you are OK with the amount\n",
+    "    await op.swap_from_quote(quote)\n",
+    "```\n",
     "\n",
+    "\"I am Feeling lucky\" swap:\n",
+    "\n",
+    "```python\n",
+    "from sugar.chains import AsyncBaseChain\n",
+    "\n",
+    "async with AsyncBaseChain() as chain:\n",
+    "    tokens = await chains.get_all_tokens(listed_only=True)\n",
+    "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
+    "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
+    "    eth = get_token_by_address(\"ETH\")\n",
+    "    await op.swap(velo, eth, 10, slippage=0.01)\n",
     "```"
    ]
   },
@@ -230,9 +244,11 @@
     "|nfpm_contract_addr|`SUGAR_NFPM_CONTRACT_ADDR`|chain specific|\n",
     "|price_oracle_contract_addr|`SUGAR_PRICE_ORACLE_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|router_contract_addr|`SUGAR_ROUTER_CONTRACT_ADDR_<CHAIN_ID>`|chain specific|\n",
+    "|swapper_contract_addr|`SUGAR_ROUTER_SWAPPER_CONTRACT_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|token_addr|`SUGAR_TOKEN_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|stable_token_addr|`SUGAR_STABLE_TOKEN_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|connector_tokens_addrs|`SUGAR_CONNECTOR_TOKENS_ADDRS_<CHAIN_ID>`|chain specific|\n",
+    "|excluded_tokens_addrs|`SUGAR_EXCLUDED_TOKENS_ADDRS_<CHAIN_ID>`|chain specific|\n",
     "|price_batch_size|`SUGAR_PRICE_BATCH_SIZE`|40|\n",
     "|price_threshold_filter|`SUGAR_PRICE_THRESHOLD_FILTER`|10|\n",
     "|pool_page_size|`SUGAR_POOL_PAGE_SIZE`|500|\n",
