--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -39,7 +39,8 @@
     "from eth_abi.packed import encode_packed\n",
     "from dataclasses import dataclass\n",
     "from sugar.token import Token\n",
-    "from sugar.pool import LiquidityPoolForSwap"
+    "from sugar.pool import LiquidityPoolForSwap\n",
+    "from fastcore.test import test_eq"
    ]
   },
   {
@@ -105,8 +106,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastcore.test import test_eq\n",
-    "\n",
     "path = [\n",
     "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), False),\n",
     "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
