tweak close eps

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -895,7 +895,7 @@
     "    q2 = op.get_quote(from_token=velo, to_token=usdc, amount_in=10)\n",
     "    amount_out2 = q2.amount_out / 10 ** usdc.decimals\n",
     "\n",
-    "test_close(amount_out1, amount_out2)"
+    "test_close(amount_out1, amount_out2, 0.0001)"
    ]
   },
   {
