fix slippage calc, add tests, start quote tests

--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -28,7 +28,8 @@
     "from typing import List, Tuple\n",
     "from decimal import Decimal\n",
     "from datetime import datetime, timedelta\n",
-    "from dataclasses import dataclass"
+    "from fastcore.test import test_eq\n",
+    "import math"
    ]
   },
   {
@@ -135,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "1743416583"
+       "1745236501"
       ]
      },
      "execution_count": null,
@@ -157,7 +158,29 @@
     "\n",
     "def apply_slippage(amount: int, slippage: float) -> int:\n",
     "    if slippage < 0 or slippage > 1: raise ValueError(\"Slippage must be between 0 and 1\")\n",
-    "    return int(amount * (1 - slippage))"
+    "    return int(math.ceil(amount * (1 - slippage)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0.05% slippage\n",
+    "test_eq(apply_slippage(232165, 0.05 / 100), 232049)\n",
+    "\n",
+    "# 1% slippage\n",
+    "test_eq(apply_slippage(232165, 1 / 100), 229844)\n",
+    "\n",
+    "# 5% slippage\n",
+    "test_eq(apply_slippage(232165, 5 / 100), 220557)\n",
+    "\n",
+    "# 0.01% slippage\n",
+    "test_eq(apply_slippage(19936, 0.01 / 100), 19935)\n",
+    "\n",
+    "# 0.1% slippage\n",
+    "test_eq(apply_slippage(19936, 0.1 / 100), 19917)"
    ]
   },
   {
