cleanup config, add tests

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -60,16 +60,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ETH price: 2493.730879871026\n",
-      "tBTC price: 89224.39116374683\n",
-      "USDbC price: 1.0017660536011292\n",
-      "WETH price: 2493.730879871026\n",
-      "T price: 0.017866263433246897\n",
-      "ETH price: 2493.740797040875\n",
-      "tBTC price: 89224.74599491524\n",
-      "USDbC price: 1.0017697172914204\n",
-      "WETH price: 2493.740797040875\n",
-      "T price: 0.01786632641861627\n"
+      "ETH price: 1768.296199950167\n",
+      "tBTC price: 93360.67688341912\n",
+      "USDbC price: 1.0093169584081934\n",
+      "WETH price: 1768.296199950167\n",
+      "T price: 0.017533047336501028\n",
+      "ETH price: 1768.296375339803\n",
+      "tBTC price: 93360.68614346001\n",
+      "USDbC price: 1.0093169907685393\n",
+      "WETH price: 1768.296375339803\n",
+      "T price: 0.01753304732841051\n"
      ]
     }
    ],
@@ -104,16 +104,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ETH price: 2553.3386872068204\n",
-      "VELO price: 0.06543596476209321\n",
-      "RED price: 0.12055408976396115\n",
+      "ETH price: 1744.4492427207376\n",
+      "VELO price: 0.05062317692743053\n",
+      "RED price: 0.08773882884393253\n",
       "USDC price: 1.0\n",
-      "WETH price: 2553.3386872068204\n",
-      "ETH price: 2553.3386872068204\n",
-      "VELO price: 0.06543596476209321\n",
-      "RED price: 0.12055408976396115\n",
+      "WETH price: 1744.4492427207376\n",
+      "ETH price: 1744.4492427207376\n",
+      "VELO price: 0.05062317692743053\n",
+      "RED price: 0.08773882884393253\n",
       "USDC price: 1.0\n",
-      "WETH price: 2553.3386872068204\n"
+      "WETH price: 1744.4492427207376\n"
      ]
     }
    ],
@@ -148,16 +148,16 @@
      "text": [
       "vAMM-USDC/VELO\n",
       "-----------------------\n",
-      "Volume: 756749.1011111111 USDC | 13151147.940511389 VELO | $1637676.1540950162\n",
-      "Fees: 6810.74191 USDC | 118360.3314646025 VELO | $14739.085386855146\n",
-      "TVL: 2286090.488682 USDC | 35949447.85712064 VELO | $4700011.161312506\n",
-      "APR: 28.920762224848183%\n",
+      "Volume: 33002.43411111111 USDC | 1171963.9049981958 VELO | $92316.04750086606\n",
+      "Fees: 297.021907 USDC | 10547.675144983761 VELO | $830.8444275077945\n",
+      "TVL: 1925694.554074 USDC | 38054890.00589409 VELO | $3851283.241620407\n",
+      "APR: 18.69648738123409%\n",
       "vAMM-USDC/VELO\n",
       "-----------------------\n",
-      "Volume: 756749.1011111111 USDC | 13151147.940511389 VELO | $1637675.781948628\n",
-      "Fees: 6810.74191 USDC | 118360.3314646025 VELO | $14739.082037537652\n",
-      "TVL: 2286090.488682 USDC | 35949447.85712064 VELO | $4700010.093279505\n",
-      "APR: 28.92076222484818%\n"
+      "Volume: 33002.43411111111 USDC | 1171963.9049981958 VELO | $92316.04750086606\n",
+      "Fees: 297.021907 USDC | 10547.675144983761 VELO | $830.8444275077945\n",
+      "TVL: 1925694.554074 USDC | 38054890.00589409 VELO | $3851283.241620407\n",
+      "APR: 18.69648738123409%\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
     "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
     "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
     "    eth = get_token_by_address(\"ETH\")\n",
-    "    quote = await op.get_quote(velo, eth, 10)\n",
+    "    quote = await op.get_quote(from_token=velo, to_token=eth, amount=10)\n",
     "    # check on quote to see if you are OK with the amount\n",
     "    await op.swap_from_quote(quote)\n",
     "```\n",
@@ -216,7 +216,7 @@
     "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
     "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
     "    eth = get_token_by_address(\"ETH\")\n",
-    "    await op.swap(velo, eth, 10, slippage=0.01)\n",
+    "    await op.swap(from_token=velo, to_token=eth, amount=10, slippage=0.01)\n",
     "```"
    ]
   },
