add swap slippage config

--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -55,7 +55,8 @@
     "  \"pagination_limit\": int(os.getenv(\"SUGAR_PAGINATION_LIMIT\",\"2000\")),\n",
     "  \"pool_page_size\": int(os.getenv(\"SUGAR_POOL_PAGE_SIZE\",\"300\")),\n",
     "  \"native_token_symbol\": \"ETH\",\n",
-    "  \"native_token_decimals\": 18\n",
+    "  \"native_token_decimals\": 18,\n",
+    "  \"swap_slippage\": 0.01,\n",
     "}\n",
     "\n",
     "\n",
@@ -81,6 +82,8 @@
     "    connector_tokens_addrs: List[str]\n",
     "    # tokens to exclude from quote search graph\n",
     "    excluded_tokens_addrs: List[str]\n",
+    "    # default swap slippage in % (0.0-1.0)\n",
+    "    swap_slippage: float\n",
     "    price_batch_size: int\n",
     "    price_threshold_filter: int\n",
     "    pagination_limit: int\n",
@@ -105,6 +108,10 @@
     "\n",
     "def validate_settings(settings: ChainSettings) -> ChainSettings:\n",
     "    # TODO: this should actually validate stuff, duh\n",
+    "    floats = [\"swap_slippage\"]\n",
+    "    ints = [\"price_batch_size\", \"price_threshold_filter\", \"pagination_limit\", \"pool_page_size\", \"native_token_decimals\"]\n",
+    "    for k in floats: setattr(settings, k, float(getattr(settings, k)))\n",
+    "    for k in ints: setattr(settings, k, int(getattr(settings, k)))\n",
     "    return settings\n",
     "\n",
     "def get_env(key: str, default: Any) -> Any: return os.getenv(key, default)\n",
@@ -225,15 +232,19 @@
     "assert len(op_settings.excluded_tokens_addrs) > 1\n",
     "assert op_settings.chain_id != base_settings.chain_id\n",
     "\n",
+    "assert op_settings.swap_slippage == 0.01\n",
+    "\n",
     "# test env overrides\n",
     "\n",
     "def test_env(key: str, default: Any) -> Any:\n",
     "    return {\n",
     "        \"SUGAR_RPC_URI_10\": \"https://super-optimism-mainnet.wallet.coinbase.com\",\n",
+    "        \"SUGAR_SWAP_SLIPPAGE_10\": \"0.05\",\n",
     "    }.get(key, default)\n",
     "\n",
     "op_settings = make_op_chain_settings(get_env=test_env)\n",
     "assert op_settings.rpc_uri == \"https://super-optimism-mainnet.wallet.coinbase.com\"\n",
+    "assert op_settings.swap_slippage == 0.05\n",
     "\n",
     "op_settings = make_op_chain_settings(get_env=test_env, rpc_uri=\"https://mirror-optimism-mainnet.wallet.coinbase.com\")\n",
     "assert op_settings.rpc_uri == \"https://mirror-optimism-mainnet.wallet.coinbase.com\"\n",
