--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -216,7 +216,7 @@
     "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
     "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
     "    eth = get_token_by_address(\"ETH\")\n",
-    "    await op.swap(from_token=velo, to_token=eth, amount=10, slippage=0.01)\n",
+    "    await op.swap(from_token=velo, to_token=eth, amount=10)\n",
     "```"
    ]
   },
@@ -245,6 +245,7 @@
     "|price_oracle_contract_addr|`SUGAR_PRICE_ORACLE_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|router_contract_addr|`SUGAR_ROUTER_CONTRACT_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|swapper_contract_addr|`SUGAR_ROUTER_SWAPPER_CONTRACT_ADDR_<CHAIN_ID>`|chain specific|\n",
+    "|swap_slippage|`SUGAR_SWAP_SLIPPAGE_<CHAIN_ID>`|0.01|\n",
     "|token_addr|`SUGAR_TOKEN_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|stable_token_addr|`SUGAR_STABLE_TOKEN_ADDR_<CHAIN_ID>`|chain specific|\n",
     "|connector_tokens_addrs|`SUGAR_CONNECTOR_TOKENS_ADDRS_<CHAIN_ID>`|chain specific|\n",
