--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -35,7 +35,7 @@
     "#| export\n",
     "\n",
     "import os\n",
-    "from dataclasses import dataclass, make_dataclass\n",
+    "from dataclasses import dataclass, make_dataclass, fields\n",
     "from sugar.helpers import normalize_address\n",
     "from typing import List, Callable, Any, Dict\n",
     "from fastcore.test import test_eq"
@@ -53,7 +53,7 @@
     "  \"price_batch_size\": int(os.getenv(\"SUGAR_PRICE_BATCH_SIZE\",\"40\")),\n",
     "  \"price_threshold_filter\": int(os.getenv(\"SUGAR_PRICE_THRESHOLD_FILTER\",\"10\")),\n",
     "  \"pagination_limit\": int(os.getenv(\"SUGAR_PAGINATION_LIMIT\",\"2000\")),\n",
-    "  \"pool_page_size\": int(os.getenv(\"SUGAR_POOL_PAGE_SIZE\",\"300\")),\n",
+    "  \"pool_page_size\": int(os.getenv(\"SUGAR_POOL_PAGE_SIZE\",\"500\")),\n",
     "  \"native_token_symbol\": \"ETH\",\n",
     "  \"native_token_decimals\": 18,\n",
     "  \"swap_slippage\": 0.01,\n",
@@ -134,6 +134,9 @@
     "        if k.endswith(\"_addr\"): d[k] = normalize_address(d[k])\n",
     "        # anything that ends in \"_addrs\", should be a list of normalized addresses\n",
     "        if k.endswith(\"_addrs\"): d[k] = list(map(lambda a: normalize_address(a), d[k].split(\",\")))\n",
+    "\n",
+    "    # we only want fields that are in the ChainSettings dataclass\n",
+    "    d =  {k: v for k, v in d.items() if k in [field.name for field in fields(ChainSettings)]}\n",
     "\n",
     "    return validate_settings(make_dataclass(ChainSettings.__name__, ((k, type(v)) for k, v in d.items()))(**d)) "
    ]
@@ -250,7 +253,12 @@
     "assert op_settings.rpc_uri == \"https://mirror-optimism-mainnet.wallet.coinbase.com\"\n",
     "# make sure lists are parsed correctly\n",
     "assert type(op_settings.connector_tokens_addrs) is list\n",
-    "assert len(op_settings.connector_tokens_addrs) > 1"
+    "assert len(op_settings.connector_tokens_addrs) > 1\n",
+    "\n",
+    "\n",
+    "# when keyword args are flying left and right, it's easy to get lost\n",
+    "s = make_op_chain_settings(get_env=test_env, swap_slippage=0.1, hello=\"word\")\n",
+    "assert not hasattr(s, \"hello\")"
    ]
   },
   {
