--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -60,16 +60,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ETH price: 1768.296199950167\n",
-      "tBTC price: 93360.67688341912\n",
-      "USDbC price: 1.0093169584081934\n",
-      "WETH price: 1768.296199950167\n",
-      "T price: 0.017533047336501028\n",
-      "ETH price: 1768.296375339803\n",
-      "tBTC price: 93360.68614346001\n",
-      "USDbC price: 1.0093169907685393\n",
-      "WETH price: 1768.296375339803\n",
-      "T price: 0.01753304732841051\n"
+      "ETH price: 1812.3979523224696\n",
+      "tBTC price: 95688.3506011309\n",
+      "USDbC price: 1.0085229125718211\n",
+      "WETH price: 1812.3979523224696\n",
+      "T price: 0.01933236880366975\n",
+      "ETH price: 1812.3979523224696\n",
+      "tBTC price: 95688.3506011309\n",
+      "USDbC price: 1.0085229125718211\n",
+      "WETH price: 1812.3979523224696\n",
+      "T price: 0.01933236880366975\n"
      ]
     }
    ],
@@ -104,16 +104,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ETH price: 1744.4492427207376\n",
-      "VELO price: 0.05062317692743053\n",
-      "RED price: 0.08773882884393253\n",
+      "ETH price: 1794.9212588679125\n",
+      "VELO price: 0.054409719594976834\n",
+      "RED price: 0.09451726568693898\n",
       "USDC price: 1.0\n",
-      "WETH price: 1744.4492427207376\n",
-      "ETH price: 1744.4492427207376\n",
-      "VELO price: 0.05062317692743053\n",
-      "RED price: 0.08773882884393253\n",
+      "WETH price: 1794.9212588679125\n",
+      "ETH price: 1794.9212588679125\n",
+      "VELO price: 0.054409719594976834\n",
+      "RED price: 0.09451726568693898\n",
       "USDC price: 1.0\n",
-      "WETH price: 1744.4492427207376\n"
+      "WETH price: 1794.9212588679125\n"
      ]
     }
    ],
@@ -146,18 +146,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ">>>>>>> got pools 500\n",
+      ">>>>>>> got pools 1000\n",
+      ">>>>>>> got pools 1307\n",
+      ">>>>>>> got pools 1307\n",
       "vAMM-USDC/VELO\n",
       "-----------------------\n",
-      "Volume: 33002.43411111111 USDC | 1171963.9049981958 VELO | $92316.04750086606\n",
-      "Fees: 297.021907 USDC | 10547.675144983761 VELO | $830.8444275077945\n",
-      "TVL: 1925694.554074 USDC | 38054890.00589409 VELO | $3851283.241620407\n",
-      "APR: 18.69648738123409%\n",
+      "Volume: 182312.92122222224 USDC | 2698226.004261449 VELO | $328506.14819195116\n",
+      "Fees: 1640.816291 USDC | 24284.034038353042 VELO | $2956.5553337275605\n",
+      "TVL: 1777271.82861 USDC | 32596344.38246878 VELO | $3544769.675918862\n",
+      "APR: 21.83292639918091%\n",
       "vAMM-USDC/VELO\n",
       "-----------------------\n",
-      "Volume: 33002.43411111111 USDC | 1171963.9049981958 VELO | $92316.04750086606\n",
-      "Fees: 297.021907 USDC | 10547.675144983761 VELO | $830.8444275077945\n",
-      "TVL: 1925694.554074 USDC | 38054890.00589409 VELO | $3851283.241620407\n",
-      "APR: 18.69648738123409%\n"
+      "Volume: 182312.92122222224 USDC | 2698226.004261449 VELO | $328257.87064859766\n",
+      "Fees: 1640.816291 USDC | 24284.034038353042 VELO | $2954.3208358373786\n",
+      "TVL: 1777271.82861 USDC | 32596344.38246878 VELO | $3542186.395419241\n",
+      "APR: 21.83844876022061%\n"
      ]
     }
    ],
@@ -166,7 +170,7 @@
     "\n",
     "async with AsyncOPChain() as chain:\n",
     "    pools = await chain.get_pools()\n",
-    "    usdc_velo = next(iter([p for p in pools if p.token0.token_address == OPChain.usdc and p.token1.token_address == OPChain.velo]), None)\n",
+    "    usdc_velo = next(iter([p for p in pools if p.token0.token_address == OPChain.usdc.token_address and p.token1.token_address == OPChain.velo.token_address]), None)\n",
     "    print(f\"{usdc_velo.symbol}\")\n",
     "    print(\"-----------------------\")\n",
     "    print(f\"Volume: {usdc_velo.token0_volume} {usdc_velo.token0.symbol} | {usdc_velo.token1_volume} {usdc_velo.token1.symbol} | ${usdc_velo.volume}\")\n",
@@ -176,7 +180,7 @@
     "\n",
     "with OPChain() as chain:\n",
     "    pools = chain.get_pools()\n",
-    "    usdc_velo = next(iter([p for p in pools if p.token0.token_address == OPChain.usdc and p.token1.token_address == OPChain.velo]), None)\n",
+    "    usdc_velo = next(iter([p for p in pools if p.token0.token_address == OPChain.usdc.token_address and p.token1.token_address == OPChain.velo.token_address]), None)\n",
     "    print(f\"{usdc_velo.symbol}\")\n",
     "    print(\"-----------------------\")\n",
     "    print(f\"Volume: {usdc_velo.token0_volume} {usdc_velo.token0.symbol} | {usdc_velo.token1_volume} {usdc_velo.token1.symbol} | ${usdc_velo.volume}\")\n",
